Undo on linked rig with overrides loses custom shapes #85981

Closed
opened 2021-02-25 12:15:07 +01:00 by Damien Picard · 15 comments
Member

System Information
Operating system: Linux-5.4.0-66-generic-x86_64-with-debian-bullseye-sid 64 Bits (Kubuntu 20.04)
Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.102.04

Blender Version
Broken: version: 2.91.2, branch: master, commit date: 2021-01-19 16:15, hash: 5be9ef4177
Broken: version: 2.92.0 Release Candidate, branch: master, commit date: 2021-02-24 11:53, hash: 812a362bd8
Broken: version: 2.93.0 Alpha, branch: master (modified), commit date: 2021-02-25 10:13, hash: b5d39f9b46
Worked: 2.83

Caused by 4c3d51326e

Short description of error
When a character is linked and overridden and has a specific hierarchy, custom bone shapes are lost on undo. They appear again if the scene is saved and reloaded.

I could narrow down the problem to the following hierarchy:
image.png
The error occurs only when the custom shape object (Widget) is parented to another object (Wgt_grp).

Exact steps for others to reproduce the error
debug_shapes_lost_src.blend
From an empty file:

  • Link the Character (link me) collection from the attached blend file
  • Select it and make library override
  • Select the Armature object
  • Enter pose mode
  • Undo

The bone’s custom shape is lost. On more complex characters, all shapes are lost.

**System Information** Operating system: Linux-5.4.0-66-generic-x86_64-with-debian-bullseye-sid 64 Bits (Kubuntu 20.04) Graphics card: GeForce GTX 970/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.102.04 **Blender Version** Broken: version: 2.91.2, branch: master, commit date: 2021-01-19 16:15, hash: `5be9ef4177` Broken: version: 2.92.0 Release Candidate, branch: master, commit date: 2021-02-24 11:53, hash: `812a362bd8` Broken: version: 2.93.0 Alpha, branch: master (modified), commit date: 2021-02-25 10:13, hash: `b5d39f9b46` Worked: 2.83 Caused by 4c3d51326e **Short description of error** When a character is linked and overridden and has a specific hierarchy, custom bone shapes are lost on undo. They appear again if the scene is saved and reloaded. I could narrow down the problem to the following hierarchy: ![image.png](https://archive.blender.org/developer/F9838196/image.png) The error occurs only when the custom shape object (`Widget`) is parented to another object (`Wgt_grp`). **Exact steps for others to reproduce the error** [debug_shapes_lost_src.blend](https://archive.blender.org/developer/F9838213/debug_shapes_lost_src.blend) From an empty file: * Link the `Character (link me)` collection from the attached blend file * Select it and make library override * Select the `Armature` object * Enter pose mode * Undo The bone’s custom shape is lost. On more complex characters, all shapes are lost.
Author
Member

Added subscriber: @pioverfour

Added subscriber: @pioverfour
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will have a quick look.

Can confirm, will have a quick look.
Philipp Oeser self-assigned this 2021-02-25 16:01:04 +01:00
Philipp Oeser removed their assignment 2021-02-26 15:53:57 +01:00

This issue was referenced by 4cc04beb77

This issue was referenced by 4cc04beb77367c94af9d303d38876739e5fe4b9b

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2021-03-01 18:25:48 +01:00

Root of the issue here is that your shape object is parented to another object, instead of being just linked in the Widgets collection. this creates a dependency from the shape object towards the empty Wgt_grp one, which is tagged for overrides since it is not a bone shape...

While that kind of situation should be avoided, it's not a bug per se, just means that the shape object will be overridden too. Will fix the bug resetting overridden shape objects though.

Root of the issue here is that your shape object is parented to another object, instead of being just linked in the Widgets collection. this creates a dependency from the shape object towards the empty `Wgt_grp` one, which is tagged for overrides since it is not a bone shape... While that kind of situation should be avoided, it's not a bug *per se*, just means that the shape object will be overridden too. Will fix the bug resetting overridden shape objects though.
Author
Member

Hello Bastien,
thanks so much for the quick fix!
I agree that this situation should be avoided, but as far as I understand, it comes from the autorig add-on we’re using, Auto-Rig Pro.
I admit I don’t know the rationale behind this parenting…

Hello Bastien, thanks so much for the quick fix! I agree that this situation should be avoided, but as far as I understand, it comes from the autorig add-on we’re using, Auto-Rig Pro. I admit I don’t know the rationale behind this parenting…
Member

Changed status from 'Resolved' to: 'Confirmed'

Changed status from 'Resolved' to: 'Confirmed'
Member

Seems like the fix is not working for me, @mont29, @pioverfour : can you confirm?
#85981.webm

Seems like the fix is not working for me, @mont29, @pioverfour : can you confirm? [#85981.webm](https://archive.blender.org/developer/F9857452/T85981.webm)
Author
Member

@lichtwerk Ah, indeed it still occurs with c4ef90f5a0; thanks for your vigilance.

@lichtwerk Ah, indeed it still occurs with `c4ef90f5a0`; thanks for your vigilance.

Uhu, not sure how I missed that in my tests... Think because I was using a .blend with already overridden rig.

Anyway, this is not an override issue, but a very nice gem of a bug in our rig reading code itself (could have affected other cases of mixing local armature object with linked armature data in fact).

Uhu, not sure how I missed that in my tests... Think because I was using a .blend with already overridden rig. Anyway, this is not an override issue, but a very nice gem of a bug in our rig reading code itself (could have affected other cases of mixing local armature object with linked armature data in fact).

This issue was referenced by b3005bf688

This issue was referenced by b3005bf6881f37fb4ed34c3f3b2db4cf4530814e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author
Member

Thanks, I can no longer reproduce the bug :)

Thanks, I can no longer reproduce the bug :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85981
No description provided.