Fix T85981, part II: bone's custom shape disappear on undo in some cases.

Nicely hidden bug in pose read library code, it was using the library
from the wrong ID as reference to relink the custom shape object pointer
(pose is data from Object, not Armature).